test/TestSuite/Scheduler/Errors/multiple_durations.tjp
project test "Test" "1.0" 2007-10-31 +1m

resource tux "Tux"

# MARK: error 6 multiple_durations 
task t "T" {
  effort 1d
  length 2d
  allocate tux
}

